test/org/midica/testfiles/failing/function-in-block.midica
INCLUDE inc/instruments.midica

{

	FUNCTION mac1
		0 c /4
	END

}